src/main/java/com/example/gonggang/global/config/error/exception/ServiceException.java
package com.example.gonggang.global.config.error.exception;

import com.example.gonggang.global.config.error.ErrorCode;
import lombok.AllArgsConstructor;
import lombok.Getter;

@Getter
@AllArgsConstructor
public class ServiceException extends RuntimeException {
    private final ErrorCode errorCode;
}
